--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,17 @@ body {
   font-size: 16px;
 }
 
+input {
+  border-radius: 5px;
+  border: 1px solid gray;
+}
+
+input:focus {
+  outline: none;
+  border-color: #3c93df;
+  box-shadow: 0 0 5px #6baae0;
+}
+
 header {
   top: 0;
   position: fixed;
@@ -53,23 +64,65 @@ header {
 }
 
 .request-left {
+  font-size: 20px;
   margin-right: auto;
   padding: 15px;
-  align-self: end;
+  align-self: center;
   text-align: center;
   width: 50%;
 }
-.request-left p {
-  padding: 15px;
-}
 .request-left h1 {
-  font-weight: bold;
+  font-weight: 900;
   font-size: 35px;
+  padding-bottom: 20px;
 }
 
 .request-right {
   padding: 15px;
   width: 50%;
+}
+.request-right h2 {
+  font-size: 30px;
+  font-weight: 900;
+}
+
+.reg-button {
+  margin-top: 20px;
+  text-align: center;
+}
+.reg-button button {
+  border: 0px;
+  border-radius: 50px;
+  width: 50%;
+  background-color: #3c93df;
+  color: #ffffff;
+  padding: 10px;
+}
+
+.user-input {
+  padding: 15px 0px;
+}
+.user-input p::after {
+  content: "*";
+  color: red;
+}
+.user-input input {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 10px;
+}
+
+.right-chekbox {
+  display: inline-block;
+}
+.right-chekbox input:checked {
+  background-color: blue;
+}
+.right-chekbox a {
+  color: #3c93df;
+}
+.right-chekbox a:hover {
+  text-decoration: underline;
 }
 
 /*# sourceMappingURL=main.css.map */
