--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
+  width: 100vw;
+  height: 100vh;
 }
 
 input {
@@ -138,6 +140,11 @@ header button:hover {
     margin: 0 auto;
     width: max-content;
   }
+  .request-conteiner {
+    width: 900px;
+    padding: 0px;
+    margin-top: 100px;
+  }
 }
 .menu {
   display: none;
@@ -216,6 +223,40 @@ header button:hover {
 }
 
 @media (max-width: 900px) {
+  .request-conteiner {
+    display: contents;
+  }
+  .request-left {
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 70px;
+  }
+  .request-left p {
+    font-size: 16px;
+  }
+  .request-left h1 {
+    font-size: 24px;
+  }
+  .request-right {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .request-right h2 {
+    font-size: 22px;
+    font-weight: 900;
+  }
+  .reg-button {
+    margin-top: 20px;
+    text-align: center;
+  }
+  .reg-button button {
+    border: 0px;
+    border-radius: 50px;
+    width: 100%;
+    background-color: #3c93df;
+    color: #ffffff;
+    padding: 10px;
+  }
   .header-right {
     display: none;
   }
@@ -264,6 +305,14 @@ header button:hover {
     width: 100%;
     color: black;
     background-color: white;
+  }
+}
+@media (max-width: 600) {
+  .request-left p {
+    font-size: 14px;
+  }
+  .request-left h1 {
+    font-size: 20px;
   }
 }
 
