--- a/css/main.scss
+++ b/css/main.scss
@@ -4,6 +4,8 @@ $contentwidth: 1220px;
 body{
     font-family: $font-family;
     font-size: 16px;
+    width: 100vw;
+    height: 100vh;
 }
 
 input{
@@ -150,6 +152,12 @@ header{
         margin: 0 auto;
       width: max-content;
     }
+
+    .request-conteiner{
+        width:900px;
+        padding: 0px;
+        margin-top: 100px;
+    }
 }
 
 
@@ -233,6 +241,46 @@ header{
   }
 
 @media (max-width: 900px) {
+    .request-conteiner{
+        display: contents;
+    }
+    .request-left{
+        width: 90%;
+        margin: 0 auto;
+        margin-top: 70px;
+        p{
+            font-size: 16px;
+        }
+        h1{
+            font-size: 24px;
+        }
+    }
+
+    .request-right{
+        width: 90%;
+        margin: 0 auto;
+
+        h2{
+            font-size: 22px;
+            font-weight: 900;
+        }
+    }
+    .reg-button{
+        margin-top: 20px;
+        text-align: center;
+    button{
+        border: 0px;
+        border-radius: 50px;
+        width: 100%;
+        background-color: #3c93df;
+        color: #ffffff;
+        padding: 10px;
+    }
+    }
+
+
+
+
     .header-right{display: none;}
     .header-content{
         width: 90vw;
@@ -281,4 +329,16 @@ header{
         color: black;
         background-color: white;
       }
+}
+
+@media(max-width: 600){
+    .request-left{
+        p{
+            font-size: 14px;
+        }
+        h1{
+            font-size: 20px;
+        }
+    }
+
 }
