--- a/css/course.scss
+++ b/css/course.scss
@@ -4,15 +4,32 @@ $contentwidth: 1220px;
 .course-saction{
     font-family: $font-family;
     padding: 15px;
-    margin: 50px auto;
+    margin: 50px auto 10px auto;
     width: $contentwidth;
     text-align: center;
-
+    height: 500px;
     h1{
         font-size: 40px;
     }
 }
 
+.slider-buttons{
+    width: 100%;
+    text-align: center;
+    margin-bottom: 40px;
+    button{
+        margin: 5px;
+        width: 10px;
+        height: 10px;
+        background-color: rgb(155, 154, 154);
+        border-width: 0px;
+        border-radius: 50%;
+
+        &:hover{
+            background-color: rgb(82, 82, 82);
+        }
+    }
+}
 
 .course-elem{
     display: flex;
@@ -64,4 +81,31 @@ $contentwidth: 1220px;
         width: fit-content;
         margin: 15px;
     }
+}
+
+@media(max-width: 1250px) {
+    .course-saction {
+        width: 600px;
+
+        h1{
+            font-size: 30px;
+        }
+    }
+    .course-elem {
+        margin: 0 auto;
+        justify-content: space-between;
+        width: 100%;
+    }
+  }
+
+@media(max-width: 600px) {
+    .course-saction{
+        width:300px;
+        padding: 10px;
+
+        h1{
+            font-size: 25px;
+        }
+    }
+    
 }
