--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,7 @@ body{
     font-size: 16px;
     width: 100vw;
     height: 100vh;
+    background-color: #f7f7f7;
 }
 
 input{
@@ -101,7 +102,7 @@ header{
         border: 0px;
         border-radius: 50px;
         width: 50%;
-        background-color: #3c93df;
+        background-color: #337ab7;
         color: #ffffff;
         padding: 10px;
     }
@@ -125,7 +126,7 @@ header{
     display: inline-block;
     
     input:checked{
-        background-color: blue; 
+        background-color: 337ab7; 
     }
 
     a{
@@ -191,7 +192,7 @@ header{
     width: 50px;
     height: 40px;
     border-radius: 10px;
-    background-color: #3c93df;
+    background-color: #337ab7;
     display: flex;
     justify-content: center;  // Додаємо це для горизонтального центрування
     align-items: center;      // Додаємо це для вертикального центрування
@@ -272,7 +273,7 @@ header{
         border: 0px;
         border-radius: 50px;
         width: 100%;
-        background-color: #3c93df;
+        background-color: #337ab7;
         color: #ffffff;
         padding: 10px;
     }
