--- a/css/course.scss
+++ b/css/course.scss
@@ -2,6 +2,7 @@ $font-family: 'Open Sans', sans-serif;
 $contentwidth: 1220px;
 
 .course-saction{
+    background-color: #ffffff;
     font-family: $font-family;
     padding: 15px;
     margin: 50px auto 10px auto;
@@ -14,6 +15,7 @@ $contentwidth: 1220px;
 }
 
 .slider-buttons{
+    background-color: #ffffff;
     width: 100%;
     text-align: center;
     margin-bottom: 40px;
@@ -84,6 +86,11 @@ $contentwidth: 1220px;
 }
 
 @media(max-width: 1250px) {
+
+    .statisctic{
+        width:600px;
+    }
+
     .course-saction {
         width: 600px;
 
@@ -99,6 +106,23 @@ $contentwidth: 1220px;
   }
 
 @media(max-width: 600px) {
+
+    .statisctic {
+        justify-content: center;
+        margin: 10px auto;
+        flex-wrap: wrap;
+        width: 300px;
+        padding: 0px;
+    }
+
+    .elem-stat{
+        width: 135px;
+        font-size: 12px;
+        img{
+            margin: 5px;
+        }
+    }
+
     .course-saction{
         width:300px;
         padding: 10px;
