--- a/css/main.scss
+++ b/css/main.scss
@@ -4,8 +4,7 @@ $contentwidth: 1220px;
 body{
     font-family: $font-family;
     font-size: 16px;
-    width: 100vw;
-    height: 100vh;
+
     background-color: #f7f7f7;
 }
 
@@ -141,7 +140,7 @@ header{
 
 @media (max-width: 1250px) {
     header {
-      width: 100vw;
+      width: 100%;
       margin: 0px;
     }
 
@@ -151,10 +150,11 @@ header{
   
     .header-content {
         margin: 0 auto;
-      width: max-content;
+      width: 100%;
     }
 
     .request-conteiner{
+        margin: 0 auto;
         width:900px;
         padding: 0px;
         margin-top: 100px;
@@ -301,7 +301,7 @@ header{
         display: flex;
         position: absolute;
         top: 0;
-        margin-top: 75px;
+        margin-top: 70px;
         left: 0;
         flex-direction: column;
         width: 100%;
@@ -318,7 +318,7 @@ header{
       }
       #menu-toggle:checked ~ .menu li {
         height: 2.5em;
-        padding: 0.5em;
+        padding: 0.3em;
         transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
       }
       .menu > li {
