--- a/css/style/main.css
+++ b/css/style/main.css
@@ -1,8 +1,6 @@
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 16px;
-  width: 100vw;
-  height: 100vh;
   background-color: #f7f7f7;
 }
 
@@ -131,7 +129,7 @@ header button:hover {
 
 @media (max-width: 1250px) {
   header {
-    width: 100vw;
+    width: 100%;
     margin: 0px;
   }
   .header-right {
@@ -139,9 +137,10 @@ header button:hover {
   }
   .header-content {
     margin: 0 auto;
-    width: max-content;
+    width: 100%;
   }
   .request-conteiner {
+    margin: 0 auto;
     width: 900px;
     padding: 0px;
     margin-top: 100px;
@@ -279,7 +278,7 @@ header button:hover {
     display: flex;
     position: absolute;
     top: 0;
-    margin-top: 75px;
+    margin-top: 70px;
     left: 0;
     flex-direction: column;
     width: 100%;
@@ -295,7 +294,7 @@ header button:hover {
   }
   #menu-toggle:checked ~ .menu li {
     height: 2.5em;
-    padding: 0.5em;
+    padding: 0.3em;
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
   }
   .menu > li {
