--- a/css/style/qoute.css
+++ b/css/style/qoute.css
@@ -1,8 +1,14 @@
+#markCurse {
+  background-color: #ffffff;
+}
+
 .qoute-conteiner {
   padding: 15px;
+  padding-top: 60px;
   width: 1220px;
-  margin: 50px auto 20px auto;
+  margin: 0 auto;
   text-align: center;
+  height: 350px;
 }
 .qoute-conteiner h1 {
   font-size: 35px;
@@ -13,7 +19,6 @@
   position: relative;
   display: flex;
   font-size: 20px;
-  height: max-content;
 }
 .qoute-text span {
   font-size: 40px;
@@ -25,6 +30,63 @@
 
 #last {
   align-self: end;
+}
+
+.qoute-buttons {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 40px;
+  padding-bottom: 50px;
+}
+.qoute-buttons button {
+  margin: 5px;
+  width: 10px;
+  height: 10px;
+  background-color: rgb(155, 154, 154);
+  border-width: 0px;
+  border-radius: 50%;
+}
+.qoute-buttons button:hover {
+  background-color: rgb(82, 82, 82);
+}
+
+@media (max-width: 1250px) {
+  .qoute-conteiner {
+    width: 950px;
+    height: 350px;
+  }
+  .qoute-text {
+    width: 100%;
+    margin: 30px auto;
+  }
+}
+@media (max-width: 980px) {
+  .qoute-conteiner {
+    width: 600px;
+    height: 250px;
+    padding: 10px;
+  }
+  .qoute-conteiner h1 {
+    font-size: 26px;
+  }
+  .qoute-text {
+    font-size: 14px;
+    margin: 10px auto;
+  }
+}
+@media (max-width: 640px) {
+  .qoute-conteiner {
+    width: 280px;
+    height: 325px;
+    padding: 10px;
+  }
+  .qoute-conteiner h1 {
+    font-size: 22px;
+  }
+  .qoute-text {
+    font-size: 12px;
+    margin: 10px auto;
+  }
 }
 
 /*# sourceMappingURL=qoute.css.map */
