--- a/css/main.scss
+++ b/css/main.scss
@@ -68,7 +68,9 @@ header{
     margin-top: 200px ;
     padding: 15px;
 }
-
+#main{
+    height: 100px;
+}
 .request-left{
     font-size: 20px;
     margin-right: auto;
