--- a/css/style/main.css
+++ b/css/style/main.css
@@ -65,6 +65,10 @@ header button:hover {
   padding: 15px;
 }
 
+#main {
+  height: 100px;
+}
+
 .request-left {
   font-size: 20px;
   margin-right: auto;
