--- a/css/style/video.css
+++ b/css/style/video.css
@@ -1,84 +1,84 @@
-.video-content {
+#video {
+  background-color: #f7f7f7;
+}
+#video .video-content {
   width: 1220px;
   margin: 0 auto;
   padding: 15px;
-  align-items: center;
 }
-
-.title-dis {
+#video .video-content .title-dis {
   text-align: center;
 }
-.title-dis h1 {
+#video .video-content .title-dis h1 {
   font-weight: 900;
   font-size: 40px;
 }
-.title-dis p {
+#video .video-content .title-dis p {
   padding-top: 15px;
 }
-
-.videoUrl {
+#video .video-content .videoUrl {
   display: flex;
 }
-.videoUrl iframe {
+#video .video-content .videoUrl iframe {
   margin: 30px auto;
   width: 1020px;
   height: 500px;
 }
-
 @media (max-width: 1250px) {
-  .video-content {
+  #video .video-content {
+    padding: 0;
     width: 100%;
   }
-  .title-dis {
+  #video .video-content .title-dis {
     margin: 0 auto;
-    width: 900px;
+    max-width: 900px;
   }
 }
 @media (max-width: 1020px) {
-  .video-content {
+  #video .video-content {
     padding: 0;
   }
-  .videoUrl iframe {
+  #video .video-content .videoUrl iframe {
     width: 100%;
     height: 400px;
   }
-  .title-dis {
-    width: 600px;
+  #video .video-content .title-dis {
+    max-width: 600px;
   }
-  .title-dis h1 {
+  #video .video-content .title-dis h1 {
     font-size: 30px;
   }
-  .title-dis p {
+  #video .video-content .title-dis p {
     font-size: 16px;
   }
 }
 @media (max-width: 650px) {
-  .title-dis {
-    width: 400px;
+  #video .video-content .title-dis {
+    max-width: 400px;
   }
-  .title-dis h1 {
+  #video .video-content .title-dis h1 {
     font-size: 30px;
   }
-  .title-dis p {
+  #video .video-content .title-dis p {
     font-size: 16px;
   }
-  .videoUrl iframe {
+  #video .video-content .videoUrl iframe {
     width: 100%;
     height: 300px;
   }
 }
 @media (max-width: 500px) {
-  .videoUrl iframe {
+  #video .videoUrl iframe {
     width: 100%;
     height: 200px;
   }
-  .title-dis {
-    width: 280px;
+  #video .title-dis {
+    max-width: 280px;
   }
-  .title-dis h1 {
+  #video .title-dis h1 {
     font-size: 24px;
   }
-  .title-dis p {
+  #video .title-dis p {
     font-size: 12px;
   }
 }
