--- a/css/mentor.scss
+++ b/css/mentor.scss
@@ -6,6 +6,7 @@
         width:1220px;
         margin: 0 auto;
         padding: 15px;
+        padding-top: 50px;
         h1{
             text-align: center;
             font-weight: 900;
@@ -66,6 +67,7 @@
         .mentors-conteiner{
             width:600px;
             padding: 10px;
+            padding-top: 25px;
             .mentors-elem{
                 display: block;
                 img{
