--- a/css/style/course.css
+++ b/css/style/course.css
@@ -55,6 +55,7 @@
 }
 
 .course-result {
+  padding: 20px 0px;
   background-color: #3c93df;
   font-family: "Open Sans", sans-serif;
 }
@@ -63,7 +64,7 @@
   display: flex;
   justify-content: space-between;
   padding: 15px;
-  margin: 50px auto;
+  margin: 0px auto;
   width: 1220px;
 }
 
