--- a/css/main.scss
+++ b/css/main.scss
@@ -4,8 +4,6 @@ $contentwidth: 1220px;
 body{
     font-family: $font-family;
     font-size: 16px;
-
-    background-color: #f7f7f7;
 }
 
 input{
@@ -17,6 +15,11 @@ input:focus{
     outline:none;
     border-color: #3c93df;
     box-shadow: 0 0 5px #6baae0;
+}
+
+#main{
+    background-color: #f7f7f7;
+    height: 100px;
 }
 
 header{
@@ -40,126 +43,122 @@ header{
         background-color: #68b7fd60;
         color: #3c93df;
     }
-}
-
-.header-content{
-    padding: 15px;
-    width: 1220px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-}
-
-.header-content img{
-    width: 70px;
-    height: 70px;
-    padding: 0;
-}
-
-.header-right{
-    margin-left: auto;
-    font-size: 0px;
-}
-
-.request-conteiner{
-    margin: 0 auto;
-    width: $contentwidth;
-    display: flex;
-    margin-top: 50px ;
-    padding: 15px;
-}
-#main{
-    height: 100px;
-}
-.request-left{
-    font-size: 20px;
-    margin-right: auto;
-    padding: 15px;
-    align-self: center;
-    text-align: center;
-    width: 50%;
-
-    h1 {
-        font-weight: 900;
-        font-size: 35px;
-        padding-bottom: 20px;
+    .header-content{
+        padding: 15px;
+        width: 1220px;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        img{
+            width: 70px;
+            height: 70px;
+            padding: 0;
+        }
+        .header-right{
+            margin-left: auto;
+            font-size: 0px;
+        }
     }
 }
 
-.request-right{
-    padding: 15px;
-    width:50%;
+#request{
+    background-color: #f7f7f7;
 
-    h2{
-        font-size: 30px;
-        font-weight: 900;
+    .request-conteiner{
+        margin: 0 auto;
+        width: $contentwidth;
+        display: flex;
+        padding: 15px;
+        padding-top: 30px;
+
+        .request-left{
+            font-size: 20px;
+            margin-right: auto;
+            padding: 15px;
+            align-self: center;
+            text-align: center;
+            width: 50%;
+        
+            h1 {
+                font-weight: 900;
+                font-size: 35px;
+                padding-bottom: 20px;
+            }
+        }
+
+        .request-right{
+            padding: 15px;
+            width:50%;
+        
+            h2{
+                font-size: 30px;
+                font-weight: 900;
+            }
+            .user-input{
+                padding: 15px 0px;
+                p::after{
+                    content: '*';
+                    color: red;
+                }
+            
+                input{
+                    box-sizing: border-box;
+                    width: 100%;
+                    padding: 10px;
+                }
+            }
+
+            .right-chekbox{
+                display: inline-block;
+                
+                input:checked{
+                    background-color: 337ab7; 
+                }
+            
+                a{
+                    color: #3c93df;
+                }
+                a:hover{
+                    text-decoration: underline;
+                }
+            }
+
+            .reg-button {
+                margin-top: 20px;
+                text-align: center;
+                button{
+                    border: 0px;
+                    border-radius: 50px;
+                    width: 50%;
+                    background-color: #337ab7;
+                    color: #ffffff;
+                    padding: 10px;
+                }
+            }             
+        }
     }
 }
 
-.reg-button {
-    margin-top: 20px;
-    text-align: center;
-    button{
-        border: 0px;
-        border-radius: 50px;
-        width: 50%;
-        background-color: #337ab7;
-        color: #ffffff;
-        padding: 10px;
-    }
-}
 
-.user-input{
-    padding: 15px 0px;
-    p::after{
-        content: '*';
-        color: red;
-    }
-
-    input{
-        box-sizing: border-box;
-        width: 100%;
-        padding: 10px;
-    }
-}
-
-.right-chekbox{
-    display: inline-block;
-    
-    input:checked{
-        background-color: 337ab7; 
-    }
-
-    a{
-        color: #3c93df;
-    }
-    a:hover{
-        text-decoration: underline;
-    }
-}
 
 
 
 @media (max-width: 1250px) {
     header {
-      width: 100%;
       margin: 0px;
-    }
-
-    .header-right{
-        margin: 0px auto;
-    }
-  
-    .header-content {
-        margin: 0 auto;
-      width: 100%;
-    }
-
-    .request-conteiner{
+      .header-content {
         margin: 0 auto;
         width:900px;
-        padding: 0px;
-        margin-top: 100px;
+        }
+    }
+
+    #request{
+        .request-conteiner{
+            margin: 0 auto;
+            width:900px;
+            padding: 0px;
+            
+        }
     }
 }
 
@@ -174,12 +173,12 @@ header{
     padding: 0;
   }
   
-  .menu > li {
+.menu > li {
     margin: 0 1rem;
     overflow: hidden;
-  }
+}
   
-  .menu-button-container {
+.menu-button-container {
     display: none;
     height: 100%;
     width: 30px;
@@ -188,16 +187,16 @@ header{
     justify-content: center;
     align-items: center;
 
-  }
+}
 
-  .backcolor {
+.backcolor {
     width: 50px;
     height: 40px;
     border-radius: 10px;
     background-color: #337ab7;
-    display: flex;
-    justify-content: center;  // Додаємо це для горизонтального центрування
-    align-items: center;      // Додаємо це для вертикального центрування
+    display: none;
+    justify-content: center;
+    align-items: center;  
     button{
         background-color: #ffffff;
         margin: 0;
@@ -211,90 +210,87 @@ header{
         background-color: #68b7fd60;
         color: #3c93df;
     }
-  }
+}
   
-  #menu-toggle {
+#menu-toggle {
     display: none;
-  }
+}
   
-  .menu-button,
-  .menu-button::before,
-  .menu-button::after {
-    display: block;
-    background-color: #ffffff;
-    position: absolute;
-    height: 3px;
-    width: 30px;
-    transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
-    border-radius: 2px;
-  }
+.menu-button,
+.menu-button::before,
+.menu-button::after {
+   display: block;
+   background-color: #ffffff;
+   position: absolute;
+   height: 3px;
+   width: 30px;
+   transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+   border-radius: 2px;
+}
   
-  .menu-button::before {
-    content: '';
-    margin-top: -8px;
-  }
+.menu-button::before {
+   content: '';
+   margin-top: -8px;
+}
   
-  .menu-button::after {
-    content: '';
-    margin-top: 8px;
-  }
+.menu-button::after {
+   content: '';
+   margin-top: 8px;
+}
 
-  .backcolor{
-    display: none;
-  }
+@media (max-width: 930px) {
+    #request{
+        .request-conteiner{
+            display: contents;
 
-@media (max-width: 900px) {
-    .request-conteiner{
-        display: contents;
-    }
-    .request-left{
-        width: 90%;
-        margin: 0 auto;
-        margin-top: 70px;
-        p{
-            font-size: 16px;
-        }
-        h1{
-            font-size: 24px;
-        }
-    }
+            .request-left{
+                width: 90%;
+                margin: 0 auto;
 
-    .request-right{
-        width: 90%;
-        margin: 0 auto;
+                p{
+                    font-size: 16px;
+                }
+                h1{
+                    font-size: 24px;
+                }
+            }
 
-        h2{
-            font-size: 22px;
-            font-weight: 900;
-        }
-    }
-    .reg-button{
-        margin-top: 20px;
-        text-align: center;
-    button{
-        border: 0px;
-        border-radius: 50px;
-        width: 100%;
-        background-color: #337ab7;
-        color: #ffffff;
-        padding: 10px;
-    }
-    }
+            .request-right{
+                width: 90%;
+                margin: 0 auto;
+        
+                h2{
+                    font-size: 22px;
+                    font-weight: 900;
+                }
 
-
-
-
-    .header-right{display: none;}
-    .header-content{
-        width: 90vw;
-        justify-content: space-between;
-        img{
-            width: 50px;
-            height: 50px;
+                .reg-button{
+                    margin-top: 20px;
+                    text-align: center;
+                button{
+                    border: 0px;
+                    border-radius: 50px;
+                    width: 100%;
+                    background-color: #337ab7;
+                    color: #ffffff;
+                    padding: 10px;
+                }
+                }
+            }
         }
     }
+
     header{
         height: 75px;
+        .header-content{
+            width: 90vw;
+            justify-content: space-between;
+            img{
+                width: 50px;
+                height: 50px;
+            }
+            .header-right{display: none;}
+        }
     }
     .menu-button-container, .backcolor {
         display: flex;
@@ -335,22 +331,23 @@ header{
 }
 
 @media(max-width: 600){
-    .request-left{
-        padding: 10px;
-        p{
-            font-size: 14px;
+    #request{
+        .request-conteiner{
+            padding: 10px;
+
+            .request-left{
+                padding: 10px;
+                p{
+                    font-size: 14px;
+                }
+                h1{
+                    font-size: 20px;
+                }
+            }
+
+            .request-right{
+                padding: 10px;
+            }
         }
-        h1{
-            font-size: 20px;
-        }
     }
-
-    .request-conteiner{
-        padding: 10px;
-    }
-
-    .request-right{
-        padding: 10px;
-    }
-
 }
