--- a/css/null.css
+++ b/css/null.css
@@ -10,6 +10,7 @@
 body {
     width: 100%;
     line-height: 1.6;
+    background-color: #ffffff;
 }
 
 /* Всі посилання повинні мати кольоровий текст та прихований підкреслювання */
