--- a/css/style/course.css
+++ b/css/style/course.css
@@ -1,8 +1,7 @@
 #course {
   background-color: #ffffff;
 }
-
-.course-saction {
+#course .course-saction {
   font-family: "Open Sans", sans-serif;
   padding: 15px;
   margin: 50px auto 10px auto;
@@ -10,16 +9,36 @@
   text-align: center;
   height: 500px;
 }
-.course-saction h1 {
+#course .course-saction h1 {
   font-size: 40px;
 }
-
-.slider-buttons {
+#course .course-saction .course-elem {
+  display: flex;
+  justify-content: center;
+  transition: transform 0.5s ease;
+}
+#course .course-saction .course-elem .course {
+  margin: 15px 20px;
+  text-align: center;
+  color: gray;
+}
+#course .course-saction .course-elem .course img {
+  margin-bottom: 10px;
+}
+#course .course-saction .course-elem .course hr {
+  border-color: #3c93df;
+  margin: 15px 0px 30px 0px;
+}
+#course .course-saction .course-elem .course h3 {
+  font-weight: 900;
+  font-size: 20px;
+}
+#course .slider-buttons {
   width: 100%;
   text-align: center;
   margin-bottom: 40px;
 }
-.slider-buttons button {
+#course .slider-buttons button {
   margin: 5px;
   width: 10px;
   height: 10px;
@@ -27,102 +46,84 @@
   border-width: 0px;
   border-radius: 50%;
 }
-.slider-buttons button:hover {
+#course .slider-buttons button:hover {
   background-color: rgb(82, 82, 82);
 }
-
-.course-elem {
-  display: flex;
-  justify-content: center;
-  transition: transform 0.5s ease;
-}
-
-.course {
-  margin: 15px 20px;
-  text-align: center;
-  color: gray;
-}
-.course img {
-  margin-bottom: 10px;
-}
-.course hr {
-  border-color: #3c93df;
-  margin: 15px 0px 30px 0px;
-}
-.course h3 {
-  font-weight: 900;
-  font-size: 20px;
-}
-
-.course-result {
+#course .course-result {
   padding: 20px 0px;
   background-color: #3c93df;
   font-family: "Open Sans", sans-serif;
 }
-
-.statisctic {
+#course .course-result .statisctic {
   display: flex;
   justify-content: space-between;
   padding: 15px;
   margin: 0px auto;
   width: 1220px;
 }
-
-.elem-stat {
+#course .course-result .statisctic .elem-stat {
   text-align: center;
   color: #ffffff;
 }
-.elem-stat img {
+#course .course-result .statisctic .elem-stat img {
   height: 60px;
   width: fit-content;
   margin: 15px;
 }
 
 @media (max-width: 1250px) {
-  .statisctic {
+  #course .course-saction {
     width: 600px;
     padding: 10px;
   }
-  .course-result {
-    padding: 0px;
-  }
-  .course-saction {
-    width: 600px;
-    padding: 10px;
-  }
-  .course-saction h1 {
+  #course .course-saction h1 {
     font-size: 30px;
   }
-  .course-elem {
+  #course .course-saction .course-elem {
     margin: 0 auto;
     justify-content: space-between;
     width: 100%;
   }
+  #course .course-result {
+    padding: 0px;
+  }
+  #course .course-result .statisctic {
+    width: 600px;
+    padding: 10px;
+  }
 }
 @media (max-width: 600px) {
-  .statisctic {
+  #course .course-saction {
+    width: 280px;
+    padding: 10px;
+  }
+  #course .course-saction h1 {
+    font-size: 25px;
+  }
+  #course .course-saction .course-elem {
+    margin: 0 auto;
+    justify-content: space-between;
+    width: 100%;
+  }
+  #course .course-saction .course-elem .course {
+    margin: 0px;
+  }
+  #course .course-result {
+    padding: 0px;
+  }
+  #course .course-result .statisctic {
     justify-content: center;
     margin: 10px auto;
     flex-wrap: wrap;
     width: 280px;
     padding: 0px;
   }
-  .elem-stat {
+  #course .course-result .statisctic .elem-stat {
     width: 135px;
     font-size: 12px;
   }
-  .elem-stat img {
+  #course .course-result .statisctic .elem-stat img {
     margin: 5px;
-  }
-  .course {
-    margin: 0px;
-  }
-  .course-saction {
-    width: 280px;
-    padding: 10px;
-  }
-  .course-saction h1 {
-    font-size: 25px;
   }
 }
 
