--- a/css/style/qoute.css
+++ b/css/style/qoute.css
@@ -1,8 +1,7 @@
 #markCurse {
   background-color: #ffffff;
 }
-
-.qoute-conteiner {
+#markCurse .qoute-conteiner {
   padding: 15px;
   padding-top: 100px;
   width: 1220px;
@@ -10,35 +9,32 @@
   text-align: center;
   height: 350px;
 }
-.qoute-conteiner h1 {
+#markCurse .qoute-conteiner h1 {
   font-size: 35px;
 }
-
-.qoute-text {
+#markCurse .qoute-conteiner .qoute-list .qoute-elem .qoute-text {
   margin: 50px 150px;
   position: relative;
   display: flex;
   font-size: 20px;
 }
-.qoute-text span {
+#markCurse .qoute-conteiner .qoute-list .qoute-elem .qoute-text span {
   font-size: 40px;
   color: gray;
   line-height: 0px;
   font-weight: 900;
   letter-spacing: 1px;
 }
-
-#last {
+#markCurse .qoute-conteiner .qoute-list .qoute-elem .qoute-text #last {
   align-self: end;
 }
-
-.qoute-buttons {
+#markCurse .qoute-buttons {
   width: 100%;
   text-align: center;
   margin-bottom: 40px;
   padding-bottom: 50px;
 }
-.qoute-buttons button {
+#markCurse .qoute-buttons button {
   margin: 5px;
   width: 10px;
   height: 10px;
@@ -46,45 +42,43 @@
   border-width: 0px;
   border-radius: 50%;
 }
-.qoute-buttons button:hover {
+#markCurse .qoute-buttons button:hover {
   background-color: rgb(82, 82, 82);
 }
 
 @media (max-width: 1250px) {
-  .qoute-conteiner {
+  #markCurse .qoute-conteiner {
     width: 950px;
     height: 350px;
     padding-top: 30px;
   }
-  .qoute-text {
+  #markCurse .qoute-conteiner .qoute-list .qoute-elem .qoute-text {
     width: 100%;
     margin: 30px auto;
   }
 }
 @media (max-width: 980px) {
-  .qoute-conteiner {
+  #markCurse .qoute-conteiner {
     width: 600px;
     height: 250px;
     padding: 10px;
   }
-  .qoute-conteiner h1 {
-    font-size: 26px;
-  }
-  .qoute-text {
+  #markCurse .qoute-conteiner .qoute-list .qoute-elem .qoute-text {
     font-size: 14px;
     margin: 10px auto;
   }
 }
 @media (max-width: 640px) {
-  .qoute-conteiner {
+  #markCurse .qoute-conteiner {
     width: 280px;
     height: 325px;
     padding: 10px;
+    padding-top: 20px;
   }
-  .qoute-conteiner h1 {
+  #markCurse .qoute-conteiner h1 {
     font-size: 22px;
   }
-  .qoute-text {
+  #markCurse .qoute-conteiner .qoute-list .qoute-elem .qoute-text {
     font-size: 12px;
     margin: 10px auto;
   }
