--- a/css/style/video.css
+++ b/css/style/video.css
@@ -24,6 +24,7 @@
   width: 1020px;
   height: 500px;
 }
+
 @media (max-width: 1250px) {
   #video .video-content {
     padding: 0;
@@ -80,6 +81,12 @@
   }
   #video .title-dis p {
     font-size: 12px;
+  }
+}
+@media (max-width: 350px) {
+  #video .videoUrl iframe {
+    width: 100%;
+    height: 100px;
   }
 }
 
