--- a/css/mentor.scss
+++ b/css/mentor.scss
@@ -1,7 +1,9 @@
 #mentor{
     background-color: #ffffff;
 
-
+    p{
+        color: gray;
+    };
     .mentors-conteiner{
         width:1220px;
         margin: 0 auto;
