--- a/css/qoute.scss
+++ b/css/qoute.scss
@@ -1,6 +1,8 @@
 #markCurse{
     background-color: #ffffff;
-
+    p{
+        color: grey;
+    }
     .qoute-conteiner{
         padding: 15px;
         padding-top: 100px;
