--- a/css/course.scss
+++ b/css/course.scss
@@ -5,6 +5,9 @@ $contentwidth: 1220px;
     background-color: #ffffff;
 
     .course-saction{
+        p{
+            color:gray;
+        }
         font-family: $font-family;
         padding: 15px;
         margin: 50px auto 10px auto;
@@ -87,7 +90,7 @@ $contentwidth: 1220px;
 @media(max-width: 1250px) {
     #course{
         .course-saction {
-            width: 600px;
+            width: 596px;
             padding: 10px;
             h1{
                 font-size: 30px;
@@ -103,7 +106,31 @@ $contentwidth: 1220px;
 
             .statisctic{
                 width:600px;
-                padding: 10px;
+                padding: 10px 0px;
+            }
+        }
+    }
+}
+
+@media(max-width:620px){
+    #course{
+        .course-result{
+            padding: 0px;
+
+            .statisctic {
+                justify-content: center;
+                margin: 10px auto;
+                flex-wrap: wrap;
+                width: 280px;
+                padding: 0px;
+
+                .elem-stat{
+                    width: 135px;
+                    font-size: 12px;
+                    img{
+                        margin: 5px;
+                    }
+                }
             }
         }
     }
@@ -124,25 +151,6 @@ $contentwidth: 1220px;
                 width: 100%;
                 .course{
                     margin: 0px;
-                }
-            }
-        }
-        .course-result{
-            padding: 0px;
-
-            .statisctic {
-                justify-content: center;
-                margin: 10px auto;
-                flex-wrap: wrap;
-                width: 280px;
-                padding: 0px;
-
-                .elem-stat{
-                    width: 135px;
-                    font-size: 12px;
-                    img{
-                        margin: 5px;
-                    }
                 }
             }
         }
