--- a/css/style/course.css
+++ b/css/style/course.css
@@ -9,6 +9,9 @@
   text-align: center;
   height: 500px;
 }
+#course .course-saction p {
+  color: gray;
+}
 #course .course-saction h1 {
   font-size: 40px;
 }
@@ -73,7 +76,7 @@
 
 @media (max-width: 1250px) {
   #course .course-saction {
-    width: 600px;
+    width: 596px;
     padding: 10px;
   }
   #course .course-saction h1 {
@@ -89,7 +92,26 @@
   }
   #course .course-result .statisctic {
     width: 600px;
-    padding: 10px;
+    padding: 10px 0px;
+  }
+}
+@media (max-width: 620px) {
+  #course .course-result {
+    padding: 0px;
+  }
+  #course .course-result .statisctic {
+    justify-content: center;
+    margin: 10px auto;
+    flex-wrap: wrap;
+    width: 280px;
+    padding: 0px;
+  }
+  #course .course-result .statisctic .elem-stat {
+    width: 135px;
+    font-size: 12px;
+  }
+  #course .course-result .statisctic .elem-stat img {
+    margin: 5px;
   }
 }
 @media (max-width: 600px) {
@@ -107,23 +129,6 @@
   }
   #course .course-saction .course-elem .course {
     margin: 0px;
-  }
-  #course .course-result {
-    padding: 0px;
-  }
-  #course .course-result .statisctic {
-    justify-content: center;
-    margin: 10px auto;
-    flex-wrap: wrap;
-    width: 280px;
-    padding: 0px;
-  }
-  #course .course-result .statisctic .elem-stat {
-    width: 135px;
-    font-size: 12px;
-  }
-  #course .course-result .statisctic .elem-stat img {
-    margin: 5px;
   }
 }
 
