--- a/css/style/mentor.css
+++ b/css/style/mentor.css
@@ -1,6 +1,9 @@
 #mentor {
   background-color: #ffffff;
 }
+#mentor p {
+  color: gray;
+}
 #mentor .mentors-conteiner {
   width: 1220px;
   margin: 0 auto;
