--- a/css/video.scss
+++ b/css/video.scss
@@ -1,6 +1,8 @@
 #video {
     background-color: #f7f7f7;
-
+    p{
+        color:gray;
+    }
     .video-content {
         width: 1220px;
         margin: 0 auto;
@@ -12,6 +14,7 @@
             h1 {
                 font-weight: 900;
                 font-size: 40px;
+                padding-top: 20px;
             }
 
             p {
