--- a/css/style/video.css
+++ b/css/style/video.css
@@ -5,6 +5,7 @@
   color: gray;
 }
 #video .video-content {
+  box-sizing: border-box;
   width: 1220px;
   margin: 0 auto;
   padding: 15px;
@@ -29,7 +30,7 @@
   height: 500px;
 }
 
-@media (max-width: 1250px) {
+@media (max-width: 1220px) {
   #video .video-content {
     padding: 0;
     width: 100%;
