--- a/css/down.scss
+++ b/css/down.scss
@@ -5,6 +5,7 @@
         
         
         .contacts-list{
+            box-sizing: border-box;
             display: flex;
             justify-content: space-between;
             padding: 15px;
@@ -43,7 +44,7 @@ footer{
     }
 }
 
-@media(max-width: 1250px) {
+@media(max-width: 1220px) {
     #contacts{
         .contacts-container{
             padding: 0px;
@@ -63,11 +64,11 @@ footer{
             padding: 0px;
 
             .contacts-list{
-                justify-content: center;
+                justify-content: space-between;
                 margin: 0px auto;
                 flex-wrap: wrap;
                 width: 280px;
-                padding: 10px;
+                
 
                 .elem-contacts{
                     width: 135px;
