--- a/css/style/course.css
+++ b/css/style/course.css
@@ -2,6 +2,7 @@
   background-color: #ffffff;
 }
 #course .course-saction {
+  box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
   padding: 15px;
   margin: 50px auto 10px auto;
@@ -63,6 +64,7 @@
   padding: 15px;
   margin: 0px auto;
   width: 1220px;
+  box-sizing: border-box;
 }
 #course .course-result .statisctic .elem-stat {
   text-align: center;
@@ -74,7 +76,7 @@
   margin: 15px;
 }
 
-@media (max-width: 1250px) {
+@media (max-width: 1220px) {
   #course .course-saction {
     width: 596px;
     padding: 10px;
@@ -101,7 +103,7 @@
   }
   #course .course-result .statisctic {
     justify-content: center;
-    margin: 10px auto;
+    margin: 0px auto;
     flex-wrap: wrap;
     width: 280px;
     padding: 0px;
