--- a/css/style/down.css
+++ b/css/style/down.css
@@ -3,6 +3,7 @@
   background-color: #3c93df;
 }
 #contacts .contacts-container .contacts-list {
+  box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   padding: 15px;
@@ -11,6 +12,9 @@
 }
 #contacts .contacts-container .contacts-list .elem-contacts {
   text-align: center;
+  color: #ffffff;
+}
+#contacts .contacts-container .contacts-list .elem-contacts p {
   color: #ffffff;
 }
 #contacts .contacts-container .contacts-list .elem-contacts img {
@@ -22,6 +26,8 @@ footer {
   text-align: center;
   width: 100%;
   padding: 50px 0px;
+}
+footer p {
   color: #3c93df;
 }
 footer a {
@@ -31,7 +37,7 @@ footer a:hover {
   text-decoration: underline;
 }
 
-@media (max-width: 1250px) {
+@media (max-width: 1220px) {
   #contacts .contacts-container {
     padding: 0px;
   }
@@ -46,11 +52,10 @@ footer a:hover {
     padding: 0px;
   }
   #contacts .contacts-container .contacts-list {
-    justify-content: center;
+    justify-content: space-between;
     margin: 0px auto;
     flex-wrap: wrap;
     width: 280px;
-    padding: 10px;
   }
   #contacts .contacts-container .contacts-list .elem-contacts {
     width: 135px;
