--- a/css/style/mentor.css
+++ b/css/style/mentor.css
@@ -5,6 +5,7 @@
   color: gray;
 }
 #mentor .mentors-conteiner {
+  box-sizing: border-box;
   width: 1220px;
   margin: 0 auto;
   padding: 15px;
@@ -48,7 +49,7 @@
   background-color: rgb(82, 82, 82);
 }
 
-@media (max-width: 1250px) {
+@media (max-width: 1220px) {
   #mentor .mentors-conteiner {
     width: 900px;
   }
