--- a/css/main.scss
+++ b/css/main.scss
@@ -137,6 +137,9 @@ header{
                     color: #ffffff;
                     padding: 10px;
                 }
+                button:hover{
+                        background-color: #0f5694;
+                    }
             }             
         }
     }
@@ -321,6 +324,10 @@ header{
         height: 2.5em;
         padding: 0.3em;
         transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+      }
+
+      #menu-toggle:checked ~ .menu{
+        border-bottom: 2px solid rgba(0, 0, 0, 0.384);
       }
       .menu > li {
         display: flex;
