--- a/css/style/main.css
+++ b/css/style/main.css
@@ -130,6 +130,9 @@ header .header-content .header-right {
   color: #ffffff;
   padding: 10px;
 }
+#request .request-conteiner .request-right .reg-button button:hover {
+  background-color: #0f5694;
+}
 
 @media (max-width: 1220px) {
   header {
@@ -290,6 +293,9 @@ header .header-content .header-right {
     height: 2.5em;
     padding: 0.3em;
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  #menu-toggle:checked ~ .menu {
+    border-bottom: 2px solid rgba(0, 0, 0, 0.384);
   }
   .menu > li {
     display: flex;
