--- a/css/course.scss
+++ b/css/course.scss
@@ -142,7 +142,7 @@ $contentwidth: 1220px;
         .course-saction {
             width:280px;
             padding: 10px;
-
+            margin-top: 10px;
             h1{
                 font-size: 25px;
             }
