--- a/css/down.scss
+++ b/css/down.scss
@@ -16,6 +16,9 @@
                 width:300px;
                 text-align: center;
                 color: #ffffff;
+                h2{
+                    font-size: 20px;
+                }
                 p{
                     color:#ffffff
                 }
