--- a/css/mentor.scss
+++ b/css/mentor.scss
@@ -86,6 +86,7 @@
 @media(max-width: 620px){
     #mentor{
         .mentors-conteiner{
+            margin-top: 10px;
             width:280px;
             text-align: center;
             h1{
