--- a/css/style/course.css
+++ b/css/style/course.css
@@ -120,6 +120,7 @@
   #course .course-saction {
     width: 280px;
     padding: 10px;
+    margin-top: 10px;
   }
   #course .course-saction h1 {
     font-size: 25px;
