Fix text in footer

--- a/css/down.scss
+++ b/css/down.scss
@@ -73,7 +73,9 @@ footer{
                 flex-wrap: wrap;
                 width: 280px;
                 
-
+                h2{
+                    font-size: 16px;
+                }
                 .elem-contacts{
                     width: 135px;
                     font-size: 12px;
